--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ idea.project {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '1.0-rc-3'
+    gradleVersion = '1.0'
 }
 
 task sourcesJar(type: Jar) {
