--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sat Jun 09 14:19:27 EDT 2012
+#Tue Jun 12 21:58:10 EDT 2012
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.0-rc-3-bin.zip
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.0-bin.zip
