--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ def compatibilityVersion = 1.5
 sourceCompatibility = compatibilityVersion
 targetCompatibility = compatibilityVersion
 group = 'org.gradle.api.plugins'
-version = '0.1'
+version = '0.2'
 
 repositories {
     mavenCentral()
@@ -102,6 +102,7 @@ if(hasProperty('nexusUsername') && hasProperty('nexusPassword')) {
     apply plugin: 'signing'
 
     signing {
+        required { gradle.taskGraph.hasTask(uploadArchives) && !version.endsWith('SNAPSHOT') }
         sign configurations.archives
     }
 
