Added a group and description to the javadoc and sources jar tasks, tests, and updated the readme.

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ repositories {
 dependencies {
     groovy localGroovy()
     compile gradleApi()
+    testCompile("org.spockframework:spock-core:0.7-groovy-1.8"){
+        exclude module:'groovy-all'
+    }
 }
 
 jar {
