--- a/src/main/resources/META-INF/gradle-plugins/com.bmuschko.nexus.properties
+++ b/src/main/resources/META-INF/gradle-plugins/com.bmuschko.nexus.properties
@@ -13,4 +13,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-implementation-class=org.gradle.api.plugins.nexus.NexusPlugin
+implementation-class=com.bmuschko.gradle.nexus.NexusPlugin
