--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,9 @@
-buildscript {
-    repositories {
-        maven { url 'http://jcenter.bintray.com' }
-    }
-
-    dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.6'
-    }
+plugins {
+    id 'groovy'
+    id 'java-gradle-plugin'
+    id 'maven-publish'
+    id 'com.jfrog.bintray' version '1.8.4'
 }
-
-apply plugin: 'groovy'
-apply plugin: 'idea'
-apply plugin: 'maven-publish'
-apply plugin: 'com.jfrog.bintray'
 
 def compatibilityVersion = 1.6
 sourceCompatibility = compatibilityVersion
@@ -20,13 +12,11 @@ group = 'com.bmuschko'
 version = '2.3.1'
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    compile localGroovy()
-    compile gradleApi()
-    testCompile('org.spockframework:spock-core:0.7-groovy-2.0') {
+    testImplementation('org.spockframework:spock-core:1.1-groovy-2.4') {
         exclude group: 'org.codehaus.groovy'
     }
 }
@@ -35,16 +25,17 @@ sourceSets {
     integrationTest {
         groovy.srcDir file('src/integTest/groovy')
         resources.srcDir file('src/integTest/resources')
-        compileClasspath = sourceSets.main.output + configurations.testRuntime
+        compileClasspath = sourceSets.main.output + configurations.testRuntimeClasspath
         runtimeClasspath = output + compileClasspath
     }
 }
 
-task integrationTest(type: Test, dependsOn: test) {
+task integrationTest(type: Test) {
     description = 'Runs the integration tests.'
     group = 'verification'
-    testClassesDir = sourceSets.integrationTest.output.classesDir
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
     classpath = sourceSets.integrationTest.runtimeClasspath
+    mustRunAfter test
 }
 
 check.dependsOn integrationTest
@@ -60,45 +51,21 @@ jar {
     }
 }
 
-idea.project {
-    jdkName = '1.6'
-
-    ipr.withXml { provider ->
-        def node = provider.asNode()
-
-        // Use GIT
-        def vcsConfig = node.component.find { it.'@name' == 'VcsDirectoryMappings' }
-        vcsConfig.mapping[0].'@vcs' = 'Git'
-
-        // Set Gradle home
-        def gradleSettings = node.appendNode('component', [name: 'GradleSettings'])
-        gradleSettings.appendNode('option', [name: 'SDK_HOME', value: gradle.gradleHomeDir])
-    }
-}
-
-idea.module {
-    testSourceDirs += file('src/integTest/groovy')
-}
-
 task sourcesJar(type: Jar) {
     classifier 'sources'
     from sourceSets.main.allSource
 }
 
-task groovydocJar(type: Jar, dependsOn: groovydoc) {
+task groovydocJar(type: Jar) {
+    dependsOn groovydoc
     classifier 'groovydoc'
     from groovydoc.destinationDir
 }
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
+task javadocJar(type: Jar) {
+    dependsOn javadoc
     classifier 'javadoc'
     from javadoc.destinationDir
-}
-
-artifacts {
-    archives sourcesJar
-    archives groovydocJar
-    archives javadocJar
 }
 
 publishing {
@@ -109,28 +76,33 @@ publishing {
             artifact groovydocJar
             artifact javadocJar
 
-            pom.withXml {
-                def root = asNode()
-                root.appendNode('name', 'Gradle Sonatype Nexus plugin')
-                root.appendNode('description', 'Gradle plugin for configuring and upload artifacts to Sonatype Nexus.')
-                root.appendNode('url', 'https://github.com/bmuschko/gradle-nexus-plugin')
-                root.appendNode('inceptionYear', '2012')
+            pom {
+                name = 'Gradle Sonatype Nexus plugin'
+                description = 'Gradle plugin for configuring and upload artifacts to Sonatype Nexus.'
+                url = 'https://github.com/bmuschko/gradle-nexus-plugin'
+                inceptionYear = '2012'
 
-                def scm = root.appendNode('scm')
-                scm.appendNode('url', 'https://github.com/bmuschko/gradle-nexus-plugin')
-                scm.appendNode('connection', 'scm:https://bmuschko@github.com/bmuschko/gradle-nexus-plugin.git')
-                scm.appendNode('developerConnection', 'scm:git://github.com/bmuschko/gradle-nexus-plugin.git')
+                scm {
+                    url = 'https://github.com/bmuschko/gradle-nexus-plugin'
+                    connection = 'scm:https://bmuschko@github.com/bmuschko/gradle-nexus-plugin.git'
+                    developerConnection = 'scm:git://github.com/bmuschko/gradle-nexus-plugin.git'
+                }
 
-                def license = root.appendNode('licenses').appendNode('license')
-                license.appendNode('name', 'The Apache Software License, Version 2.0')
-                license.appendNode('url', 'http://www.apache.org/licenses/LICENSE-2.0.txt')
-                license.appendNode('distribution', 'repo')
+                licenses {
+                    license {
+                        name = 'The Apache Software License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        distribution = 'repo'
+                    }
+                }
 
-                def developers = root.appendNode('developers')
-                def bmuschko = developers.appendNode('developer')
-                bmuschko.appendNode('id', 'bmuschko')
-                bmuschko.appendNode('name', 'Benjamin Muschko')
-                bmuschko.appendNode('email', 'benjamin.muschko@gmail.com')
+                developers {
+                    developer {
+                        id = 'bmuschko'
+                        name = 'Benjamin Muschko'
+                        email = 'benjamin.muschko@gmail.com'
+                    }
+                }
             }
         }
     }
