--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,14 @@
 plugins {
+    id 'com.gradle.build-scan' version '1.16'
     id 'groovy'
     id 'java-gradle-plugin'
     id 'maven-publish'
     id 'com.jfrog.bintray' version '1.8.4'
+}
+
+buildScan {
+    termsOfServiceUrl   = 'https://gradle.com/terms-of-service'
+    termsOfServiceAgree = 'yes'
 }
 
 def compatibilityVersion = 1.6
