--- a/.github/workflows/linux-build-release.yml
+++ b/.github/workflows/linux-build-release.yml
@@ -20,6 +20,10 @@ jobs:
         uses: eskatos/gradle-command-action@v1
         with:
           arguments: test
+      - name: Intgration tests
+        uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: integrationTest
       - name: Assemble artifact
         uses: eskatos/gradle-command-action@v1
         with:
